# bennugd-monolithic

./: CMakeLists.txt
cmake/: options.cmake  toolchain.cmake
core/bgdrtm/src/: dirs.c  misc.c
core/common/: files.c
core/include/: commons_defs.h
modules/mod_sys/: mod_sys.c
